# pytest-datafixtures

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
datafixtures/: __init__.py  entry.py
tests/: test_module.py
tests/datafixtures/: fileone
tests/sub/: test_submodule.py
